# ledger_lotto

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  metadata.tsx  page.tsx
app/api/lottery-payout/: route.ts
app/components/: BuyTickets.tsx  ConnectButton.tsx  CurrentParticipants.tsx  FaqListItem.tsx  Footer.tsx  Header.tsx  HowLedgerLottoWorks.tsx  IsPayoutTime.tsx  RecentWinnerPlaceCard.tsx  RecentWinners.tsx  UserTickets.tsx
app/components/anchor/: Providers.tsx
app/faq/: faqs.ts  page.tsx
app/tickets/: page.tsx
onchain/: .gitignore  Anchor.toml  init_program.ts  package-lock.json  package.json
onchain/migrations/: deploy.ts
onchain/post_deployment_admin/: init.ts  solana-lottery-admin-authority-keypair
onchain/programs/solana-lottery/: Cargo.toml
onchain/programs/solana-lottery/src/: constants.rs  custom_types.rs  errors.rs  lib.rs  mod.rs  state.rs
onchain/programs/solana-lottery/src/instructions/: admin.rs  lottery_payout.rs  mod.rs  purchase_ticket.rs  realloc_memory.rs
onchain/tests/: solana-lottery.ts
